--- a/web-config.json
+++ b/web-config.json
@@ -1,3 +1,6 @@
 {
-  "projects": []
+  "projects": [
+    "name": "A Web Example Repo",
+    "url": "https://github.com/TutorialMan7727/a-web-example-repo",
+  ]
 }
