That comma shouldn't be there

--- a/web-config.json
+++ b/web-config.json
@@ -2,7 +2,7 @@
   "projects": [
     {
       "name": "A Web Example Repo",
-      "url": "https://github.com/TutorialMan7727/a-web-example-repo",
+      "url": "https://github.com/TutorialMan7727/a-web-example-repo"
     }
   ]
 }
