--- a/web-config.json
+++ b/web-config.json
@@ -4,6 +4,11 @@
       "name": "A Web Example Repo",
       "id": 1,
       "url": "https://github.com/TutorialMan7727/a-web-example-repo"
+    },
+    {
+      "name": "Bob Script",
+      "id": 2,
+      "url": "https://github.com/TutorialMan7727/BobScript"
     }
   ]
 }
